# ecommerce

./: .coverage  README.md  main.py  pyproject.toml
data/: products.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_abstract_class_py.html  z_145eef247bfb46b6_categories_py.html  z_145eef247bfb46b6_mixin_class_py.html  z_145eef247bfb46b6_products_py.html  z_145eef247bfb46b6_utils_py.html
src/: abstract_class.py  categories.py  mixin_class.py  products.py  utils.py
tests/: conftest.py  test_categories.py  test_category.py  test_product.py  test_products.py
